

Version 1.9.0

+ Add RubyIterables & RubyStrings

* Deprecate all methods which require Java reflection

+ Add chunkWhile method to Enumerable

+ Add grepV method to Enumerable

+ Add sliceAfter method to Enumerable

+ Add sliceWhen method to Enumerable

+ Add toH method to Enumerable

- Remove @SafeVarargs

Version 2.0.0

* JDK 1.8

+ Add Ruby class

+ Update all methods to Ruby 2.4

+ Add RubyRange#closed, #closedOpen, #open, #openClosed

+ Add #allWeek, #allMonth, #allQuarter, #allYear to RubyDate

+ Add #nextWeek, #nextMonth, #nextQuarter, #nextYear to RubyDate

+ Add #prevWeek, #prevMonth, #prevQuarter, #prevYear to RubyDate

+ Add #mondayʔ, #tuesdayʔ, #wednesdayʔ, #thursdayʔ, #friday?, #saturdayʔ, #sundayʔ, #onWeekdayʔ, #onWeekendʔ to RubyDate

+ Add RubyDate#step, #upto, #downto

* Change #dayOfWeek to #wday,  #dayOfMonth to #mday,  #dayOfYear to #yday in RubyDate 

+ Add LocalDateTime Successor

+ Improve Generic declarations of functional interfaces in methods


Version 2.0.1

+ Add toList() API to Ruby.Enumerable

+ Add toMap() API to RubyHash

+ Add toSet() API to RubySet

* RubyArray#unshift now takes more than 1 element

+ Add Ruby.Range.of(Temporal start, Temporal end, ChronoUnit chronoUnit)


Version 2.1.0

+ Java 9 Module supported

* Replace TypeConstraintException with ClassCastException

* Improve RubyFile#chmod with Files.setPosixFilePermissions


Version 2.1.1

+ Add WholeLineReader class and enable keepNewLine feature on every readLine() related method


Version 2.1.2

+ Add Ruby.Range.of(LocalDate, LocalDate)

+ Add Ruby.Range.of(YearMonth, YearMonth)

+ Add toSet() API to Ruby.Enumerable


Version 3.0.0

+ Add RubyEnumerable#tally and RubyLazyEnumerator#tally

+ Add RubyArray#filter

+ Add RubyArray#filter(Predicate)

+ Add RubyArray#difference(Collection)

+ Add RubyArray#prepend(Object, Object...)

+ Add RubyHash#transformKeys and RubyHash#transformKeysǃ